--- a/package.json
+++ b/package.json
@@ -9,18 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@asteasolutions/zod-to-openapi": "^7.1.1",
+    "@dialectlabs/blinks": "^0.5.0",
+    "@hono/zod-openapi": "^0.15.1",
+    "@solana/actions": "^1.2.0",
+    "@solana/wallet-adapter-react": "^0.15.35",
+    "@solana/wallet-adapter-react-ui": "^0.9.35",
+    "@solana/wallet-adapter-wallets": "^0.19.32",
+    "@solana/web3.js": "^1.95.1",
+    "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.5"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "typescript": "^5"
   }
 }
